--- a/Travelers/Storyboards/Camera.storyboard
+++ b/Travelers/Storyboards/Camera.storyboard
@@ -85,11 +85,119 @@
                         <outlet property="photo" destination="lqc-9B-59P" id="1xa-I1-y6M"/>
                         <outlet property="removeButton" destination="2rJ-Ri-fAH" id="GYb-Yp-5DD"/>
                         <outlet property="shareButton" destination="WyI-YW-EkI" id="zz2-hq-fsX"/>
+                        <segue destination="e3E-Yt-fnF" kind="presentation" identifier="Filter_Segue" id="czG-uU-axG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DcH-uP-Wiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1288.8" y="312.59370314842579"/>
+        </scene>
+        <!--Filter View Controller-->
+        <scene sceneID="R90-QF-GI5">
+            <objects>
+                <viewController id="e3E-Yt-fnF" customClass="FilterViewController" customModule="Travelers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XQv-Dh-oNT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B76-wr-Ss9">
+                                <rect key="frame" x="0.0" y="20" width="375" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vd3-gq-Nno">
+                                        <rect key="frame" x="15" y="17" width="48" height="30"/>
+                                        <state key="normal" title="Cancel"/>
+                                        <connections>
+                                            <action selector="cancelBtn_TouchUpInside:" destination="e3E-Yt-fnF" eventType="touchUpInside" id="hpG-Kc-vUq"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RBJ-GE-TJa">
+                                        <rect key="frame" x="328" y="17" width="32" height="30"/>
+                                        <state key="normal" title="Next"/>
+                                        <connections>
+                                            <action selector="nextBtn_TouchUpInside:" destination="e3E-Yt-fnF" eventType="touchUpInside" id="ofI-vU-jjS"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="RBJ-GE-TJa" secondAttribute="trailing" constant="15" id="E13-Lv-LWt"/>
+                                    <constraint firstItem="Vd3-gq-Nno" firstAttribute="centerY" secondItem="B76-wr-Ss9" secondAttribute="centerY" id="Nz5-CK-ymt"/>
+                                    <constraint firstAttribute="height" constant="64" id="P11-E4-jFj"/>
+                                    <constraint firstItem="RBJ-GE-TJa" firstAttribute="centerY" secondItem="B76-wr-Ss9" secondAttribute="centerY" id="i1q-Qf-d5b"/>
+                                    <constraint firstItem="Vd3-gq-Nno" firstAttribute="centerY" secondItem="B76-wr-Ss9" secondAttribute="centerY" id="oHR-2c-lLy"/>
+                                    <constraint firstItem="Vd3-gq-Nno" firstAttribute="leading" secondItem="B76-wr-Ss9" secondAttribute="leading" constant="15" id="zHT-hh-ZGu"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9aA-P1-NTJ">
+                                <rect key="frame" x="0.0" y="84" width="375" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="xtX-wD-Quz"/>
+                                </constraints>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dDD-tn-RiT">
+                                <rect key="frame" x="0.0" y="514" width="375" height="80"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Vch-kT-cte"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V6e-NW-gRG">
+                                    <size key="itemSize" width="80" height="80"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilterCollectionViewCell" id="RJr-qu-4Y7" customClass="FilterCollectionViewCell" customModule="Travelers" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v1T-fx-ueg">
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="v1T-fx-ueg" secondAttribute="bottom" id="0RR-fN-tVh"/>
+                                            <constraint firstAttribute="trailing" secondItem="v1T-fx-ueg" secondAttribute="trailing" id="Zov-sT-f1U"/>
+                                            <constraint firstItem="v1T-fx-ueg" firstAttribute="leading" secondItem="RJr-qu-4Y7" secondAttribute="leading" id="op5-7U-dt7"/>
+                                            <constraint firstItem="v1T-fx-ueg" firstAttribute="top" secondItem="RJr-qu-4Y7" secondAttribute="top" id="th2-hF-YPa"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="filterPhoto" destination="v1T-fx-ueg" id="kdk-oE-uok"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="e3E-Yt-fnF" id="gK8-TT-1bJ"/>
+                                    <outlet property="delegate" destination="e3E-Yt-fnF" id="MK5-OG-NuK"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="B76-wr-Ss9" firstAttribute="leading" secondItem="6Lm-ch-lrW" secondAttribute="leading" id="P74-ni-Q1a"/>
+                            <constraint firstItem="9aA-P1-NTJ" firstAttribute="top" secondItem="B76-wr-Ss9" secondAttribute="bottom" id="ZBr-JQ-g2S"/>
+                            <constraint firstItem="dDD-tn-RiT" firstAttribute="trailing" secondItem="6Lm-ch-lrW" secondAttribute="trailing" id="bzY-ff-B42"/>
+                            <constraint firstItem="9aA-P1-NTJ" firstAttribute="trailing" secondItem="6Lm-ch-lrW" secondAttribute="trailing" id="cYa-8a-t0r"/>
+                            <constraint firstItem="dDD-tn-RiT" firstAttribute="top" secondItem="9aA-P1-NTJ" secondAttribute="bottom" constant="30" id="fLf-P0-eHU"/>
+                            <constraint firstItem="dDD-tn-RiT" firstAttribute="leading" secondItem="6Lm-ch-lrW" secondAttribute="leading" id="m2w-kf-2qv"/>
+                            <constraint firstItem="B76-wr-Ss9" firstAttribute="trailing" secondItem="6Lm-ch-lrW" secondAttribute="trailing" id="nSO-rB-QBX"/>
+                            <constraint firstItem="B76-wr-Ss9" firstAttribute="top" secondItem="XQv-Dh-oNT" secondAttribute="top" constant="20" id="oUq-BV-DSt"/>
+                            <constraint firstItem="9aA-P1-NTJ" firstAttribute="leading" secondItem="6Lm-ch-lrW" secondAttribute="leading" id="tho-ou-Ntl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Lm-ch-lrW"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="dDD-tn-RiT" id="DSn-Oj-SsO"/>
+                        <outlet property="filterPhoto" destination="9aA-P1-NTJ" id="BMY-5H-DCR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SSv-Ka-B1w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2029.5999999999999" y="312.59370314842579"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="J03-Cn-qiw">
